# KarmaViz

./: .gitignore  BENCHMARK_COVERAGE.md  Glowing Orb with Satellites.kvwf  LICENSE.md  README.md  __init__.py  kviz_viewer.py  main.py  pyproject.toml  requirements.txt  setup.py  setup_system_audio.py
config/: constants.py
modules/: audio_handler.py  benchmark.py  color_ops.c  color_ops.pyx  config_menu_qt.py  glsl_syntax_highlighter.py  input_sanitizer.py  karmaviz.py  line_numbered_editor.py  logging_config.py  palette_manager.py  preset_manager.py  preset_manager_widget.py  rotation_renderer.py  shader_compiler.py  shader_compiler_backup.py  shader_error_parser.py  shader_manager.py  warp_map_editor.py  warp_map_manager.py  waveform_editor.py  waveform_manager.py
palettes/: azure_mint_purple.json  bold_red_orange_yellow.json  bright_arctic_blue.json  cosmic_dance.json  cyan_blue_green.json  deep_blue_slate.json  electric_blue_cyan.json  fiery_orange_yellow.json  hot_pink_orange_magenta.json  karma_dreams.json  matrix_rain.json  neon_lime_aqua_purple.json  pastel_rainbow.json  pink_purpetrator.json  pretty_in_pink.json  purple_passion.json  rainbow.json  rich_autumn.json  rich_earth.json  rich_forest.json  rich_forest_green.json  rich_lavender.json  rich_night_sky.json  rich_ocean.json  rich_rose_gold.json  rich_sea_tones.json  rich_storm_blue.json  rich_terra.json  rich_turquoise.json  rich_violet_pink.json  rich_water.json  saturated_clay.json  saturated_pink_coral.json  sunset_red_orange.json  vibrant_coral.json  vibrant_desert.json  vibrant_earth_tones.json  volcanic_red_deep_orange.json
presets/: alien_head.kviz  cosmic_weedwhacker.kviz  groovy_lamp.kviz  julia_via_mandelbrot.kviz  laser_kaleidoscope.kviz  laser_wub_wub.kviz  lightning_vortex.kviz  liquid_universe.kviz  liquid_wave.kviz  northern_leights.kviz  phoenix_rising.kviz  proton_cloud.kviz  purple_pulsar.kviz  quantum_leap.kviz  quasar_groove.kviz  spectrowave.kviz  spider_dance.kviz  spiraling_out_of_control.kviz  stormy_monday.kviz  wake_up,_neo.kviz
presets/quick/: quick_0.kviz  quick_1.kviz  quick_2.kviz  quick_3.kviz  quick_4.kviz  quick_5.kviz  quick_6.kviz  quick_7.kviz  quick_8.kviz  quick_9.kviz
shaders/: fxaa.glsl  shaders.py
warp_maps/: create_experimental_warp_maps.py
warp_maps/basic/: breathing_space.kvwm  conveyor_belt.kvwm  deppth_of_field.kvwm  fibonacci_rectangles.kvwm  fractal.kvwm  kaleidoscope_distortion.kvwm  lens_distortion.kvwm  mandelbrot_flythrough.kvwm  mandelbrot_zoom.kvwm  mirror_ripple.kvwm  multibrot.kvwm  new_warp_map.kvwm  number_theory.kvwm  phoenix_rising.kvwm  rain_on_water.kvwm  ripple_pond.kvwm  rule_of_thirds.kvwm  seismic_waves.kvwm  spiral.kvwm  spiral_wave.kvwm  temporal_paradox.kvwm  tiles.kvwm  waves.kvwm
warp_maps/cosmic/: black_hole_lensing.kvwm  cosmic_string.kvwm  galactic_rotation.kvwm  warp_drive_bubble.kvwm
warp_maps/custom/: be_still_my_heart.kvwm  new_warp_map.kvwm  phoenix_rising.kvwm  wonder_wall.kvwm
warp_maps/digital/: circuit_trace.kvwm  data_corruption.kvwm  pixel_shift.kvwm
warp_maps/distortion/: barrel_distortion.kvwm  chromatic_aberration.kvwm  perspective_warp.kvwm  pincushion_distortion.kvwm  ripple_distortion.kvwm  spherical_distortion.kvwm  twist_distortion.kvwm  vortex_distortion.kvwm  vortex_spin.kvwm
warp_maps/experimental/: chaos_attractor.kvwm  consciousness_fractal.kvwm  consciousness_stream.kvwm  dimension_fold.kvwm  fractal.kvwm  fractal_dimension_shift.kvwm  hex_grid_flow.kvwm  hyperdimensional_projection.kvwm  metamorphic_geometry.kvwm  mirror_ripple.kvwm  möbius_strip_topology.kvwm  noise_flow.kvwm  parallel_universe_bleed.kvwm  plasma_tunnel.kvwm  quantum_entanglement.kvwm  quantum_tunneling.kvwm  quantum_vortex.kvwm  radial_pulse.kvwm  spiral_zoom.kvwm  temporal_paradox.kvwm  thirds_vortex.kvwm  time_dilation.kvwm  twist_grid.kvwm  wave_interference.kvwm
warp_maps/fractal/: barnsley_fern.kvwm  burning_ship.kvwm  dragon_curve.kvwm  julia_morph.kvwm  lyapunov.kvwm  mandelbrot_flythrough.kvwm  mandelbrot_zoom.kvwm  multibrot.kvwm  newton_fractal.kvwm  phoenix.kvwm  sierpinski_carpet.kvwm  sierpinski_warp.kvwm  strange_attractor.kvwm  tricorn.kvwm
warp_maps/futuristic/: force_field_distortion.kvwm  hologram_flicker.kvwm  quantum_tunnel.kvwm
warp_maps/geometric/: diamond_lattice.kvwm  fibonacci_rectangles.kvwm  hexagon_grid.kvwm  kaleidoscope.kvwm  kaleidoscope_distortion.kvwm  tunnel.kvwm
warp_maps/mathematical/: chaos_theory.kvwm  checker_twist.kvwm  cosmic_butterfly.kvwm  differential_equations.kvwm  fourier_transform.kvwm  gamma_function_complex.kvwm  hyperbolic_geometry.kvwm  hypergeometric_functions.kvwm  kaleidoscope_distortion.kvwm  klein_bottle.kvwm  legendre_polynomials.kvwm  mandelbrot_zoom.kvwm  mobius_strip.kvwm  modular_forms.kvwm  number_theory.kvwm  parametric_equations.kvwm  riemann_zeta_function.kvwm  ripple_rings.kvwm  spiral_wave.kvwm  tiles.kvwm  topology_functions.kvwm  weierstrass_functions.kvwm
warp_maps/motion/: conveyor_belt.kvwm  elastic_bounce.kvwm  gear_system.kvwm  liquid_surface.kvwm  magnetic_field.kvwm  orbital_dance.kvwm  pendulum_swing.kvwm  seismic_waves.kvwm  spiral_galaxy.kvwm  tidal_flow.kvwm  tornado_vortex.kvwm  vertical_hold.kvwm
warp_maps/organic/: cellular_division.kvwm  cellular_growth.kvwm  coral_reef.kvwm  flowing_water.kvwm  fluid.kvwm  fluid_turbulence.kvwm  muscle_fiber.kvwm  plasma.kvwm  plasma_flow.kvwm  rain_on_water.kvwm  skin_texture.kvwm  tree_branches.kvwm
warp_maps/retro/: arcade_screen.kvwm  crt_curvature.kvwm  vhs_tracking.kvwm
waveforms/Digital/: simple_bars.kvwf
waveforms/advanced/: crystalline.kvwf  crystalline_resonance.kvwf  fractal.kvwf  geometric_mandala.kvwf  neural_network.kvwf
waveforms/basic/: exponential.kvwf  floating_orbs.kvwf  normal.kvwf  pulse.kvwf  pulse_width_mod.kvwf  ripple_rings.kvwf  ripples.kvwf  sawtooth_wave.kvwf  sine_modulation.kvwf  sine_wave.kvwf  squared.kvwf  triangle_wave.kvwf
waveforms/cosmic/: black_hole_accretion.kvwf  cosmic_microwave.kvwf  dark_matter_web.kvwf  (+7 more)
(+96 files in other folders)
