[build-system]
requires = [
    "setuptools>=60.0.0",
    "wheel",
    "Cython>=0.29.0",
    "numpy>=1.21.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "karmaviz"
version = "1.0.0"
description = "A cutting-edge, GPU-accelerated audio visualizer for Linux with real-time GLSL shader compilation"
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [
    {name = "Karma Swint", email = "karma@karmaviz.biz"}
]
maintainers = [
    {name = "Karma Swint", email = "karma@karmaviz.biz"}
]
keywords = [
    "audio",
    "visualizer",
    "opengl",
    "glsl",
    "shaders",
    "music",
    "visualization",
    "gpu",
    "real-time"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Games/Entertainment",
]
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15.0",
    "pygame>=2.1.0",
    "moderngl>=5.6.0",
    "sounddevice>=0.4.0",
    "numpy>=1.21.0",
    "Cython>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
]
build = [
    "Cython>=0.29.0",
]

[project.urls]
Homepage = "https://github.com/KarmaTripping/KarmaViz"
Repository = "https://github.com/KarmaTripping/KarmaViz"
Issues = "https://github.com/KarmaTripping/KarmaViz/issues"
Documentation = "https://github.com/KarmaTripping/KarmaViz/blob/main/README.md"

[project.scripts]
karmaviz = "main:main"

[tool.setuptools]
packages = ["modules", "config", "shaders"]
py-modules = ["main"]
include-package-data = true


[tool.setuptools.package-data]
"*" = [
    "*.json",
    "*.glsl",
    "*.png",
    "*.jpg",
    "*.jpeg",
    "waveforms/**/*",
    "warp_maps/**/*",
    "palettes/**/*",
    "presets/**/*",
    "shaders/**/*",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | karmaviz\.build
)/
'''

exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "karmaviz.build",
    "*.egg-info",
]